# pliamem-public

./: .gitignore  LICENSE  README.md  SPEC.md  package-lock.json  package.json  test_pliamem.js
clients/python/: README.md  pyproject.toml
clients/python/src/pliamem/: __init__.py  client.py  exceptions.py
clients/python/src/pliamem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cloud-ui/: index.html  main.js  package-lock.json  package.json  style.css
config/: default.json
docs/: adapter-guide.md
src/: ai.js  chat.js  cli.js  config.js  defaults.js  index.js  kv.js  puter-client.js  ranker.js  server.js
src/adapters/: base.js  dailylog.js  flat.js  kg.js  notices.js  ompa.js  puter.js  remote.js
tests/: adapters.test.js  config.test.js  integration.test.js  ranker.test.js
