[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pliamem"
version = "0.5.0"
description = "Python client for Pliamem - Unified memory recall for AI agents"
readme = "README.md"
authors = [
  { name="Jeffrey Milam / Micap AI LLC" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0"
]

[project.urls]
"Homepage" = "https://github.com/jmiaie/pliamem-public"
